//
// Copyright (c) 2022 Intel Corporation.
// All rights reserved.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package vm_manager;

message EmptyMessage {}
